fixed x overflow, some animation changes

--- a/src/components/PartnerShow/partnerShow.css
+++ b/src/components/PartnerShow/partnerShow.css
@@ -1,5 +1,6 @@
 .partner-show-container {
   width: 100%;
+  max-width:100%;
   height: 350px;
 }
 
