--- a/src/components/ShowReel/showreel.css
+++ b/src/components/ShowReel/showreel.css
@@ -3,7 +3,9 @@
   width: 98%;
   display: flex;
   flex-direction: column;
-  
+  align-items: center;
+  justify-content: center;
+  height:90%;
 }
 
 .video-card { 
