--- a/src/components/shared/navbar/navbar.css
+++ b/src/components/shared/navbar/navbar.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     color:white;
     flex-direction: row;
-    max-width: 90%;
+    max-width: 80%;
   }
   
   /* remove default list styling  */
